@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 1.3-0
-Date: 2020-12-15
+Version: 1.3-1
+Date: 2020-12-23
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Contact: Doug and Martin <Matrix-authors@R-project.org>
